--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,67 +1,75 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  nombreAjustador: MyString
-  numeroPoliza: MyString
-  fechaExpedicion: 2014-04-25
+  companiaSeguros: MyString
+  noSiniestro: MyString
+  noPoliza: MyString
+  noInciso: MyString
+  noSerie: MyString
+  fechaSiniestro: 2014-05-03
   nombreAsegurado: MyString
-  telefonoAsegurado: MyString
-  estatusCobranza: false
-  equipoAmparado: false
-  comentarioEquipoAmparado: MyText
-  numeroSiniestro: MyString
-  numeroInciso: MyString
-  fechaSiniestro: 2014-04-25
-  terceroAsegurado: false
-  condicionesEspeciales: MyText
-  nombreTercero: MyString
-  inventario: MyText
-  numeroEconomico: MyString
-  siniestro: MyText
-  grua: false
+  numeroTelefono: MyString
+  emailAsegurado: MyString
+  horarioContacto: MyString
+  porcentajeDeducible: MyString
   valorComercial: MyString
-  sigueAuto: false
-  deducible: false
-  deducibleValor: MyString
-  aseguradoTercero: MyString
-  marca: MyString
-  tipo: MyString
-  modelo: MyString
-  numeroPuertas: 1
-  color: MyString
-  numeroSerie: MyString
-  numeroMotor: MyString
-  placas: MyString
+  montoDeducible: MyString
+  estatusCobranza: MyString
+  marcaVehiculo: MyString
+  modeloVehiculo: MyString
+  colorVehiculo: MyString
+  tipoVehiculo: MyString
+  anoVehiculo: MyString
+  placasVehiculo: MyString
+  agenteAjustador: MyString
+  terceroAsegurado: MyString
+  condicionesEspeciales: MyString
+  nombreTerceroAfectado: MyString
+  noMotor: MyString
+  siniestro: MyString
+  equipoEspecialAmparado: MyString
+  comentarioSecundario: MyString
+  requiereGrua: MyString
+  sigueAuto: MyString
+  terceroAsegurado: MyString
+  foto1: MyString
+  foto2: MyString
+  foto3: MyString
+  comentarioGeneral: MyText
 
 two:
-  nombreAjustador: MyString
-  numeroPoliza: MyString
-  fechaExpedicion: 2014-04-25
+  companiaSeguros: MyString
+  noSiniestro: MyString
+  noPoliza: MyString
+  noInciso: MyString
+  noSerie: MyString
+  fechaSiniestro: 2014-05-03
   nombreAsegurado: MyString
-  telefonoAsegurado: MyString
-  estatusCobranza: false
-  equipoAmparado: false
-  comentarioEquipoAmparado: MyText
-  numeroSiniestro: MyString
-  numeroInciso: MyString
-  fechaSiniestro: 2014-04-25
-  terceroAsegurado: false
-  condicionesEspeciales: MyText
-  nombreTercero: MyString
-  inventario: MyText
-  numeroEconomico: MyString
-  siniestro: MyText
-  grua: false
+  numeroTelefono: MyString
+  emailAsegurado: MyString
+  horarioContacto: MyString
+  porcentajeDeducible: MyString
   valorComercial: MyString
-  sigueAuto: false
-  deducible: false
-  deducibleValor: MyString
-  aseguradoTercero: MyString
-  marca: MyString
-  tipo: MyString
-  modelo: MyString
-  numeroPuertas: 1
-  color: MyString
-  numeroSerie: MyString
-  numeroMotor: MyString
-  placas: MyString
+  montoDeducible: MyString
+  estatusCobranza: MyString
+  marcaVehiculo: MyString
+  modeloVehiculo: MyString
+  colorVehiculo: MyString
+  tipoVehiculo: MyString
+  anoVehiculo: MyString
+  placasVehiculo: MyString
+  agenteAjustador: MyString
+  terceroAsegurado: MyString
+  condicionesEspeciales: MyString
+  nombreTerceroAfectado: MyString
+  noMotor: MyString
+  siniestro: MyString
+  equipoEspecialAmparado: MyString
+  comentarioSecundario: MyString
+  requiereGrua: MyString
+  sigueAuto: MyString
+  terceroAsegurado: MyString
+  foto1: MyString
+  foto2: MyString
+  foto3: MyString
+  comentarioGeneral: MyText
